# HDImageProcessing

./: .gitignore  README.md  app.py  requirements.txt  setup.cfg
src/: __init__.py
src/api/: __init__.py  app.py
src/api/routes/: __init__.py  analyze.py  metadata.py  slice.py  statistics.py  upload.py
src/core/: __init__.py  image_processor.py  segmentation.py
src/db/: __init__.py  database.py  models.py
src/tasks/: __init__.py  async_tasks.py  celery_app.py
src/utils/: __init__.py  chunk_io.py  file_validation.py  pca_utils.py
tests/: __init__.py
tests/test_api/:  test_analyze.py  test_metadata.py  test_slice.py  test_statistics.py  test_upload.py
tests/test_core/: test_image_processor.py  test_pca_utils.py
tests/test_db/: test_database.py
