[metadata]
name = HighDim-Image-Processor
version = 0.1.0
author = Your Name
author_email = you@example.com
description = A microservice for processing and analyzing 5D images
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE

[options]
packages = find:
python_requires = >=3.8

[options.extras_require]
test =
    pytest
    pytest-cov

[flake8]
# Configure flake8 linting
max-line-length = 88
exclude = 
    .venv,
    __pycache__,
    build,
    dist,
    .git,
    .tox,
    .eggs,
    *.egg-info,
    .mypy_cache,
    .pytest_cache

[coverage:run]
# Configure coverage to measure branches and skip certain files
branch = True
omit = 
    tests/*
    setup.py
    .venv/*

[coverage:report]
# Fail the build if coverage is below 80%
fail_under = 80
show_missing = True
